# plugin-gimp-fourier

./: .gitignore  Makefile.am  Makefile.gimptool  Makefile.win  README  README.Moire  README.md  bootstrap.sh  configure.ac  fourier.c  fourier.dev  fourier_common.inc  fourier_gimp3.c  mingw-compile-w32.sh  mingw-compile-w64.sh  missing.txt
.github/workflows/: main.yml
debian/: changelog  control  copyright  rules
debian/gimp2/: changelog
debian/gimp3/: changelog  control
packaging/: gimp-fourier-plugin.spec.in
po/: Makefile.am  fr.po  gimp30-fourier.pot  pt.po
rpm/: gimp-fourier-plugin.spec.in  gimp3-fourier-plugin.spec.in  gimp3-plugin-fourier.spec.in
temp_gimp3/: fourier_gimp2.c  fourier_gimp2.inc  fourier_gimp3.c  fourier_gimp3.inc  hot.c
